Remove password-based authentication